# ThreadSwarm

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: configuration.md  delivery-contract-capability-compile-run.md  how-it-works.md  local-tool-pipelines.md  product-strategy.md  quickstart.md
docs/rfcs/: 0001-run-isolation-and-pool-recovery.md  0002-capability-bound-compilation.md
examples/: __init__.py  incident_triage.py
examples/data/: incident_bundle.txt
src/: __init__.py  cli.py  config.py
src/compiler/: __init__.py  capabilities.py  parser.py
src/demos/: __init__.py  incident_triage.py
src/engine/: __init__.py  actor_pool.py  orchestrator.py  shared_memory.py  tool_registry.py
src/evals/: __init__.py  golden.py
src/models/: __init__.py  openai_compatible.py
src/tools/: __init__.py  text.py
tests/: __init__.py  test_capability_compiler.py  test_cli.py  test_compiler.py  test_config.py  test_engine.py  test_examples.py  test_models.py  test_packaged_cli.py  test_public_namespace.py  test_runtime_isolation.py  test_shared_memory_regressions.py
threadswarm/: __init__.py  cli.py  config.py
threadswarm/compiler/: __init__.py  capabilities.py  parser.py
threadswarm/demos/: __init__.py  incident_triage.py
threadswarm/engine/: __init__.py  actor_pool.py  orchestrator.py  shared_memory.py  tool_registry.py
threadswarm/evals/: __init__.py  golden.py
threadswarm/evals/golden/: text_pipeline.json
threadswarm/models/: __init__.py  openai_compatible.py
threadswarm/tools/: __init__.py  text.py
