[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ThreadSwarm"
version = "0.1.0"
description = "CPU-first DAG runtime for local tools and lightweight AI workers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
threadswarm = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.demos" = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
