[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ThreadSwarm"
version = "0.1.0"
description = "CPU-first DAG runtime for local tools and lightweight AI workers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
vision = ["opencv-python-headless>=4.8.0"]
dev = [
    "build>=1.2.2",
    "pytest>=7.0.0",
    "ruff>=0.12.0",
    "twine>=5.1.0",
]

[project.scripts]
threadswarm = "threadswarm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "threadswarm*"]

[tool.setuptools.package-data]
"src.demos" = ["data/*.txt"]
"threadswarm.evals" = ["golden/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Compatibility wrappers intentionally re-export the current internal namespace.
"threadswarm/**/*.py" = ["F403"]
